<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/politica" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:textColor="#000000"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:text="@string/text1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_margin="10dp"
                android:text="@string/informacion" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_margin="10dp"
                android:text="@string/text3" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_margin="10dp"
                android:text="@string/control" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_margin="10dp"
                android:text="@string/text4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>