<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/dialogo_personalizado">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="11dp"
                android:scaleType="center"
                android:text="@string/user"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Ipcuidador"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignLeft="@+id/telefono"
                android:layout_alignStart="@+id/telefono"
                android:layout_below="@+id/telefono"
                android:scaleType="center"
                android:text="@string/ip"
                android:textColor="@color/colorAccent"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/DirIp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/Ipcuidador"
                android:layout_alignStart="@+id/Ipcuidador"
                android:layout_below="@+id/Ipcuidador"
                android:hint="@string/ip"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <TextView
                android:id="@+id/key"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_alignLeft="@+id/DirIp"
                android:layout_alignStart="@+id/DirIp"
                android:layout_below="@+id/DirIp"
                android:scaleType="center"
                android:text="@string/clave"
                android:textColor="@color/colorAccent"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/key"
                android:layout_alignStart="@+id/key"
                android:layout_below="@+id/key"
                android:hint="@string/clave"
                android:textSize="17dp"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <Button
                android:id="@+id/botonpolitica"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:scrollHorizontally="false"
                android:text="@string/politica2"
                android:textColor="@color/colorAccent"
                android:textSize="12dp" />
            <CheckBox
                android:id="@+id/check"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/aceptPolitica" />

            <Button
                android:id="@+id/guardar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/botonguardar"
               android:layout_gravity="end"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>